Fix scroll bug on iOS 26

--- a/src/co/bookmarks/container/wrap.module.styl
+++ b/src/co/bookmarks/container/wrap.module.styl
@@ -1,6 +1,6 @@
 .wrap {
+    flex: 1;
     width: 100%
-    height: 100%
     position: relative
     display: flex
     flex-direction: column
