--- a/src/co/screen/splitview/main/content.module.styl
+++ b/src/co/screen/splitview/main/content.module.styl
@@ -1,4 +1,5 @@
 .content {
     flex: 1;
-    min-height: 0
+    min-height: 0;
+    display: flex;
 }
